<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--application name-->
    <string name="app_name">Vaporwave Music</string>

    <!--report email-->
    <string name="report_email">admin@cse350.com</string>

    <string name="title_nav_home">Home</string>
    <string name="title_nav_explore">Explore</string>
    <string name="title_nav_category">Category</string>
    <string name="title_nav_favorite">Favorite</string>
    <string name="title_nav_social">Social</string>
    <string name="title_settings">Settings</string>

    <!--home menu-->
    <string name="txt_home_featured_radios">Featured Radios</string>
    <string name="txt_home_category">Discover By Category</string>
    <string name="txt_home_recent">Recently Added</string>
    <string name="txt_home_random">Random Radios</string>

    <!--permission agreement-->
    <string name="permission_title">Thanks for installing Your Radio App</string>
    <string name="btn_allow_permissions">Allow permissions now</string>
    <string name="btn_later">I will do it later</string>
    <string name="permission_message">
        <![CDATA[
        <p>Please give us the below permission :</p>
        <p><strong>PHONE PERMISSION</strong> : it will used to stop playing radio when there is an incoming phone call.</p>
        <p>Do not worry, we guarantee your data is 100% safe and we do not collect any data that you have, the permission you give is only for the purpose of this app running properly.</p>
        ]]>
    </string>

    <!--about information-->
    <string name="title_about_privacy">Privacy Policy</string>
    <string name="sub_about_app_copyright">Copyright © 2023 CSE 350 Group Developers. \nAll right reserved</string>
    <string name="sub_about_app_version">Version</string>

    <!--sleeping timer-->
    <string name="sleep_time">Sleeping Time</string>
    <string name="min">Minutes</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="stop">Stop</string>

    <!--network & error message-->
    <string name="failed_title_text">Whoops!</string>
    <string name="failed_text">No internet connections found. Check your connection or try again later!</string>
    <string name="internet_not_connected">Internet not connected</string>
    <string name="no_data_found">No radio stations is available at this time, please try again later.</string>
    <string name="no_social_found">We are sorry, we do not have social networks at this time.</string>
    <string name="error_loading_radio">Error loading radio or server currently down, please try it again later.</string>
    <string name="msg_cancel_update">Update canceled</string>
    <string name="msg_success_update">Update success!</string>
    <string name="msg_failed_update">Update Failed!</string>

    <!--favorite-->
    <string name="favorite_add">Add to favorite</string>
    <string name="favorite_remove">Remove from favorite</string>
    <string name="favorite_added">Added to Favorite</string>
    <string name="favorite_removed">Removed from Favorite</string>
    <string name="no_favorite_found">Your favorite list is empty because you don\'t add any radios in the favorite menu</string>

    <!--settings and others-->
    <string name="title_setting_theme">Theme</string>
    <string name="msg_please_wait">Please wait&#8230;</string>
    <string name="title_setting_notification">Push Notification</string>
    <string name="sub_title_setting_notification">Manage push notification settings</string>
    <string name="title_setting_clear_cache">Clear Cache</string>
    <string name="sub_setting_clear_cache_start">Free up</string>
    <string name="sub_setting_clear_cache_end">of space</string>
    <string name="title_setting_clear_search_history">Clear search history</string>
    <string name="title_setting_privacy">Privacy Policy</string>
    <string name="title_setting_rate">Rate us</string>
    <string name="title_setting_more_apps">More apps</string>
    <string name="title_setting_about">About</string>
    <string name="msg_about_version">Version</string>
    <string name="msg_clearing_cache">Clearing cache</string>
    <string name="msg_clear_cache">Are you sure want to clear cache?</string>
    <string name="msg_cache_cleared">cache has been cleared</string>
    <string name="title_dialog_clear_search_history">Clear Search History</string>
    <string name="msg_dialog_clear_search_history">Are you sure want to clear your search history?</string>
    <string name="clearing_process">Clearing search history&#8230;</string>
    <string name="clearing_success">Search history cleared successfully&#8230;</string>
    <string name="clearing_empty">Your search history is empty</string>
    <string name="title_additional_permission">Additional permission</string>

    <!--share-->
    <string name="share_radio_text">I am listening to</string>
    <string name="share_content">I Would like to share this with you. Here You Can Download This Application from PlayStore </string>
    <string name="share">Share to friends</string>
    <string name="menu_report">Report an issue</string>

    <!--search-->
    <string name="menu_search">Search</string>
    <string name="menu_theme">Theme</string>
    <string name="no_search_found">No search result found. Try again with other keyword.</string>
    <string name="btn_retry">RETRY</string>
    <string name="search_hint">Search&#8230;</string>
    <string name="msg_search_input">Please enter your keyword first&#8230;</string>
    <string name="txt_clear_search_history">Clear Search History</string>

    <!--exit dialog-->
    <string name="message">What do you want to do?</string>
    <string name="dialog_option_quit">EXIT</string>
    <string name="dialog_option_minimize">MINIMIZE</string>

    <!--app theme-->
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_primary">Default</string>
    <string name="dialog_title_theme">Theme</string>

    <!--other string tag name-->
    <string name="msg_loading">Loading&#8230;</string>
    <string name="open_in_browser">Open in Browser</string>
    <string name="msg_oops">Whoops!</string>
    <string name="option_ok">OK</string>
    <string name="option_yes">YES</string>
    <string name="option_cancel">CANCEL</string>
    <string name="station">Stations</string>
    <string name="img_content_description">TODO</string>

</resources>
