<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/img_content_description"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/permission_title"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_rounded_corner"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_permission_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="" />

            </LinearLayout>

        </ScrollView>

        <Button
            android:id="@+id/btn_allow_permission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/btn_allow_permissions"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_later"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_later"
            android:textAllCaps="false" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text=""
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="|"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2" />

        <TextView
            android:id="@+id/txt_privacy_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:foreground="?selectableItemBackground"
            android:padding="10dp"
            android:text="@string/title_about_privacy"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2" />

    </LinearLayout>

</RelativeLayout>