<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:behavior_hideable="true"
    app:behavior_peekHeight="60dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <LinearLayout
            android:id="@+id/lyt_collapse_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="6dp"
                android:layout_gravity="center"
                android:layout_marginBottom="6dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/sheet_radio_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/img_content_description"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_artwork"
                    app:shapeAppearanceOverlay="@style/ShapeAppearance.Image.Rounded" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/sheet_radio_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text=""
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                    android:textSize="@dimen/text_title_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/sheet_category_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:ellipsize="marquee"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:freezesText="true"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:text=""
                    android:textSize="@dimen/text_sub_title_size" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_favorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingTop="16dp"
            android:paddingRight="20dp"
            android:paddingBottom="16dp">

            <ImageView
                android:id="@+id/img_favorite"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_menu_favorite_outline"
                app:tint="@color/gnt_gray" />

            <TextView
                android:id="@+id/txt_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:text="@string/favorite_add"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                android:textSize="@dimen/text_title_size" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingTop="16dp"
            android:paddingRight="20dp"
            android:paddingBottom="16dp">

            <ImageView
                android:id="@+id/img_share"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_share"
                app:tint="@color/gnt_gray" />

            <TextView
                android:id="@+id/txt_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:text="@string/share"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                android:textSize="@dimen/text_title_size" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingTop="16dp"
            android:paddingRight="20dp"
            android:paddingBottom="16dp">

            <ImageView
                android:id="@+id/img_report"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_report"
                app:tint="@color/gnt_gray" />

            <TextView
                android:id="@+id/txt_report"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:text="@string/menu_report"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                android:textSize="@dimen/text_title_size" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>